[package]
name = "frontend"
version = "0.1.0"
authors = ["Maid Dog <maiddogsrl@gmail.com>"]

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
rev = "ae8e9025d21c8ff512d8a0917494e21b9eaafc2e"

[dependencies.rocket_codegen]
git = "https://github.com/SergioBenitez/Rocket"
rev = "ae8e9025d21c8ff512d8a0917494e21b9eaafc2e"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
rev = "ae8e9025d21c8ff512d8a0917494e21b9eaafc2e"
default-features = false
features = ["json"]